@@ -1,9 +1,11 @@
 2004-09-19  Christian Ruppert <arc@users.sf.net>
 	* uwm/workspaces.c(SetWSBackground): fixed segfault in case no
 	  background image is defined for a workspace.
-	* uwm/confparse.tab.y: implemented FILE functionality.
 	* uwm/special.c(MyOpen): added error treatment in case we can't
 	  open a pipe (return fopen).
+	* uwm/confparse.tab.y: implemented FILE functionality.
+	* uwm/confparse.tab.y, uwm/confparse.lex.l, uwm/confparse.h:
+	  implemented PIPE functionality.
 
 2004-09-09  Christian Ruppert <arc@users.sf.net>
 	* uwm/handlers.c(InitHandlers): uwm now stops at initialisation in
